<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:divider="@drawable/divider_primary_gray"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/sc_finger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fingerprint_unlock"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/finger_tip"
                            android:textColor="@color/colorSecondText"
                            android:textSize="@dimen/text_small"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="每周开始日"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="星期一"
                            android:textColor="@color/colorSecondText"
                            android:textSize="@dimen/text_small"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:divider="@drawable/divider_primary_gray"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_menu_arrow_right"
                        android:gravity="center_vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/help"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_menu_arrow_right"
                        android:gravity="center_vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:text="@string/about"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

